add/feat: added new routes, all working
